apps/base/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/part-of: gitops-k8s-platform
    app.kubernetes.io/name: grafana
  annotations:
    cert-manager.io/cluster-issuer: placeholder-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.placeholder.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.placeholder.local
      secretName: grafana-ingress-secret
